# rust_web_starter

./: Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml
frontend/src/: index.html  lib.rs
