[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]  # Required for WASM

[dependencies]
leptos = "0.6"
leptos_dom = "0.6"
reqwasm = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3"
features = ["Window"]
